
public static class ConstPrm
{
    public static class Animation
    {
        public const string MOVE_SPEED_PRM = "SPEED";
        public const string ATTACK = "ATTACK";
        public const string ATTACK_INDEX = "ATTACK_INDEX";
        public const string HIT = "HIT";
        public const string DEATH = "DIE";
        public const string GROUND_PRM = "GROUND";
    }


    public static class PrefsData
    {
        public const string GAME_RESTART_FLAG = "GAME_RESTART_FLAG";
    }
}